--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>REACT CV GENERATOR</title>
   </head>
   <body>
+    <h1 style="margin: 10px; text-align: center; font-size: 50px">
+      CV GENERATOR - <span>HASITH KAUSHAL</span>
+    </h1>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script
