--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
     <title>REACT CV GENERATOR</title>
   </head>
   <body>
-    <h1 style="margin: 10px; text-align: center; font-size: 50px">
-      CV GENERATOR - <span>HASITH KAUSHAL</span>
+    <h1
+      style="
+        margin: 10px;
+        margin-bottom: 0;
+        text-align: center;
+        font-size: 40px;
+        width: 100%;
+        background-color: #f0dbaf;
+        padding: 5px;
+      "
+    >
+      CV GENERATOR
     </h1>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
